# rustemo-play

./: Cargo.toml  build.rs
.cargo/: config.toml
src/: calc.rustemo_  grammar_c.dot  grammar_c.rs  grammar_c.rustemo  grammar_c_actions.rs  json.rustemo_  main.rs
