[package]
name = "rustemo-play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
anyhow = "1.0.79"
rustemo-compiler = "0.5.0"

[dependencies]
anyhow = "1.0.79"
colored = "2.1.0"
fancy-regex = "0.13.0"
once_cell = "1.19.0"
regex = { version = "1.10.3", default-features = false, features = ["unicode-perl", "unicode-gencat", "unicode-bool"] }
rustemo = "0.5.0"
stacker = "0.1.15"
