[package]
name = "rustemo-play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
miette = { version = "5.10.0", features = ["fancy"] }
rustemo-compiler = "0.5.0"

[dependencies]
colored = "2.1.0"
miette = { version = "5.10.0", features = ["fancy"] }
once_cell = "1.19.0"
regex = { version = "1.10.3", default-features = false, features = ["unicode-perl", "unicode-gencat", "unicode-bool"] }
rustemo = "0.5.0"
stacker = "0.1.15"
